<resources>
    <string name="app_name">SimpleForm</string>
    <string name="new_user">Nowy Użytkownik</string>
    <string name="user_data">Dane Użytkownika</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="birth_date">Data urodzenia</string>
    <string name="sex">Płęć</string>
    <string name="sex_male">M</string>
    <string name="sex_female">F</string>
    <string name="address">Adres</string>
    <string name="street">Ulica</string>
    <string name="house_number">Numer domu</string>
    <string name="post_code">Kod pocztowy</string>
    <string name="city">Miasto</string>
    <string name="state">Państwo</string>
    <string name="contact_data">Dane kontaktowe</string>
    <string name="email">e-mail</string>
    <string name="phone_number">Telefon</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="options">Opcje</string>
    <string name="newsletter">Newslettera</string>
</resources>
