<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_from"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sda.pieper.simpleform.FromActivity">

    <Button
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/user_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/user_data"
                />

            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name" />

            <TextView
                android:text="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_surname" />

            <TextView
                android:text="@string/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_birth_date" />

            <TextView
                android:text="@string/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_sex" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
